Added spring boot main class in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ apply plugin: 'io.spring.dependency-management'
 group  = 'com.app.learning'
 version =  '0.0.1'
 
-
+    springBoot {
+        mainClass = "com.app.learning.Application"
+    }
 repositories {
     mavenCentral()
 }
