--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,35 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE")
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
     }
 }
-
-subprojects {
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.github.johnrengelman.shadow'
+
 
 group  = 'com.app.learning'
 version =  '0.0.1'
 
-    springBoot {
-        mainClass = "com.app.learning.Application"
-    }
+
 repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter")
-    compile group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '1.18'
-    compile group: 'org.apache.commons', name: 'commons-configuration2', version: '2.2'
-    compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
-
-    testCompile("junit:junit")
+    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.59'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 }
+
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.app.learning.Application'
+    }
 }
