--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ targetCompatibility = 1.7
 dependencies {
     compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.59'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+    compile group: 'org.jasypt', name: 'jasypt', version: '1.9.2'
 
 }
 
