--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,6 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
-    }
-}
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'application'
 
 
 group  = 'com.app.learning'
@@ -29,9 +21,4 @@ dependencies {
 
 }
 
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'com.app.learning.Application'
-    }
-}
+mainClassName = "com.app.learning.Application"
